--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -115,7 +115,7 @@ node('container') {
           }
           finally {
             junit 'openvidu/openvidu-test-e2e/**/target/surefire-reports/TEST-*.xml'
-            archiveArtifacts artifacts: '**/openvidu-server.log'
+            archiveArtifacts artifacts: '/opt/openvidu/openvidu-server.log'
           }
         }
       }
