--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -15,7 +15,7 @@ node('container') {
           sh 'rm -rf openvidu || true'
           sh 'rm -rf kurento-java || true'
           sh 'git clone https://github.com/OpenVidu/openvidu.git'
-          sh 'cd openvidu && git fetch origin && git checkout $OPENVIDU_COMMIT'
+          sh 'cd openvidu && git fetch --all && git checkout $OPENVIDU_COMMIT'
           sh(script: '''#!/bin/bash
             if $KURENTO_JAVA_SNAPSHOT ; then
               git clone https://github.com/Kurento/kurento-java.git
@@ -42,28 +42,26 @@ node('container') {
           sh(script: '''#!/bin/bash
             cd openvidu
             if [[ $OPENVIDU_BROWSER_COMMIT != "default" ]]; then
-              git checkout -f $OPENVIDU_BROWSER_COMMIT
+              git checkout $OPENVIDU_BROWSER_COMMIT
             fi
             cd openvidu-browser
-            npm install --unsafe-perm && npm run build
-            npm pack
+            npm install --unsafe-perm && npm run build && npm pack
             cp openvidu-browser-*.tgz /opt/openvidu
             cd ..
-            git checkout -f $OPENVIDU_COMMIT
+            git checkout $OPENVIDU_COMMIT
         '''.stripIndent())
         }
         stage('OpenVidu Node Client build') {
           sh(script: '''#!/bin/bash
             cd openvidu
             if [[ $OPENVIDU_NODE_CLIENT_COMMIT != "default" ]]; then
-              git checkout -f $OPENVIDU_NODE_CLIENT_COMMIT
+              git checkout $OPENVIDU_NODE_CLIENT_COMMIT
             fi
             cd openvidu-node-client
-            npm install --unsafe-perm && npm run build
-            npm pack
+            npm install --unsafe-perm && npm run build && npm pack
             cp openvidu-node-client-*.tgz /opt/openvidu
             cd ..
-            git checkout -f $OPENVIDU_COMMIT
+            git checkout $OPENVIDU_COMMIT
         '''.stripIndent())
         }
         stage('OpenVidu TestApp build') {
