--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -228,9 +228,10 @@ OPENVIDU_CDR_PATH=/opt/openvidu/cdr
 
 # Kibana And ElasticSearch Configuration
 # --------------------------
-# Kibana dashboard configuration (Credentials)
-KIBANA_USER=kibanaadmin
-KIBANA_PASSWORD=
+# Kibana And ElasticSeach Basic Auth configuration (Credentials)
+# This credentials will aso be valid for Kibana dashboard
+ELASTICSEARCH_USERNAME=elasticadmin
+ELASTICSEARCH_PASSWORD=
 
 # Cloudformation configuration
 # --------------------------
