Deployment: Fix typos Elasticsearch OpenVidu Pro

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -228,7 +228,7 @@ OPENVIDU_CDR_PATH=/opt/openvidu/cdr
 
 # Kibana And ElasticSearch Configuration
 # --------------------------
-# Kibana And ElasticSeach Basic Auth configuration (Credentials)
+# Kibana And ElasticSearch Basic Auth configuration (Credentials)
 # This credentials will aso be valid for Kibana dashboard
 ELASTICSEARCH_USERNAME=elasticadmin
 ELASTICSEARCH_PASSWORD=
