Deployment: ELK Updates - Filebeat can be used externally with and without de security - Minor fix in Label ELK label description in CF template

--- a/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
@@ -213,7 +213,7 @@ Metadata:
           - OpenViduSecret
           - MediaNodesStartNumber
       - Label:
-          default: Kibana configuration
+          default: Elasticsearch and Kibana configuration
         Parameters:
           - ElasticsearchUser
           - ElasticsearchPassword
