deployment-openvidu-pro: Use oss beats services

--- a/openvidu-server/deployments/pro/docker-compose/media-node/.env
+++ b/openvidu-server/deployments/pro/docker-compose/media-node/.env
@@ -21,10 +21,10 @@
 # -------------------------------
 # Docker hub kurento media server: https://www.docker.elastic.co/
 # Uncomment the next line and define this variable with METRICBEAT_IMAGE image that you want use
-# METRICBEAT_IMAGE=docker.elastic.co/beats/metricbeat:7.8.0
+# METRICBEAT_IMAGE=docker.elastic.co/beats/metricbeat-oss:7.8.0
 
 # FileBeat ElasticSearch Image
 # -------------------------------
 # Docker hub kurento media server: https://www.docker.elastic.co/
 # Uncomment the next line and define this variable with FILEBEAT_IMAGE image that you want use
-# FILEBEAT_IMAGE=docker.elastic.co/beats/filebeat:7.8.0
+# FILEBEAT_IMAGE=docker.elastic.co/beats/filebeat-oss:7.8.0
