--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -22,7 +22,7 @@ OPENVIDU_CDR_PATH=/opt/openvidu/cdr
 OPENVIDU_WEBHOOK=false
 OPENVIDU_WEBHOOK_ENDPOINT=
 OPENVIDU_WEBHOOK_HEADERS=[]
-OPENVIDU_WEBHOOK_EVENTS=["sessionCreated","sessionDestroyed","participantJoined","participantLeft","webrtcConnectionCreated","webrtcConnectionDestroyed","recordingStatusChanged","filterEventDispatched","mediaNodeStatusChanged"]
+OPENVIDU_WEBHOOK_EVENTS=["sessionCreated","sessionDestroyed","participantJoined","participantLeft","webrtcConnectionCreated","webrtcConnectionDestroyed","recordingStatusChanged","filterEventDispatched","mediaNodeStatusChanged","autoscaling"]
 
 OPENVIDU_RECORDING=false
 OPENVIDU_RECORDING_DEBUG=false
