openvidu-server: parameterized deprecated API support with SUPPORT_DEPRECATED_API

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -8,6 +8,8 @@ server.ssl.key-alias=openvidu-selfsigned
 logging.level.root=info
 spring.main.allow-bean-definition-overriding=true
 
+SUPPORT_DEPRECATED_API=true
+
 DOTENV_PATH=.
 
 DOMAIN_OR_PUBLIC_IP=
