deployment-openvidu-pro: Minor fix configuring different openvidu pro clusters with the same Elastic Stack

--- a/openvidu-server/deployments/pro/docker-compose/media-node/beats/filebeat.yml
+++ b/openvidu-server/deployments/pro/docker-compose/media-node/beats/filebeat.yml
@@ -19,6 +19,7 @@ processors:
   - add_fields:
       fields:
         ip: ${MEDIA_NODE_IP}
+        cluster-id: ${CLUSTER_ID}
 
 output:
   elasticsearch:
