--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -71,6 +71,12 @@ OPENVIDU_PRO_CLUSTER_MODE=manual
 # Possibles values: aws, on_premise
 OPENVIDU_PRO_CLUSTER_ENVIRONMENT=on_premise
 
+# Unique identifier of your cluster. Each OpenVidu Server Pro instance corresponds to one cluster.
+# You can launch as many clusters as you want with your license key. 
+# Cluster ID will always be stored to disk so restarting OpenVidu Server Pro will keep the same previous cluster ID
+# if this configuration parameter is not given a distinct value.
+# OPENVIDU_PRO_CLUSTER_ID=
+
 # The desired number of Media Nodes on startup. First the autodiscovery process is performed.
 # If there are too many Media Nodes after that, they will be dropped until this number is reached.
 # If there are not enough, more will be launched.
@@ -84,7 +90,6 @@ OPENVIDU_PRO_CLUSTER_ENVIRONMENT=on_premise
 # gather information synchronously when required
 # Type: number >= 0
 # OPENVIDU_PRO_CLUSTER_LOAD_INTERVAL=
-
 
 # Whether to enable or disable autoscaling. With autoscaling the number of Media Nodes will
 # be automatically adjusted according to existing load
