deployment-openvidu-pro: S3 support

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -138,6 +138,34 @@ OPENVIDU_RECORDING=false
 # Use recording module with debug mode.
 OPENVIDU_RECORDING_DEBUG=false
 
+# Where to store recording files. Can be “local” (local storage) or “s3” (AWS bucket).
+# You will need to define a OPENVIDU_PRO_AWS_S3_BUCKET if you use it.
+#OPENVIDU_PRO_RECORDING_STORAGE=
+
+# S3 Bucket where to store recording files. May include paths to allow navigating
+# folder structures inside the bucket. This property is only taken into account
+# if OPENVIDU_PRO_RECORDING_STORAGE=s3
+#OPENVIDU_PRO_AWS_S3_BUCKET=
+
+# AWS credentials access key. Must have read and write permissions over the bucket. 
+# If not provided, then the internal S3 client will try to use the default AWS credentials 
+# of the machine (if available). This property is only taken into account if
+# OPENVIDU_PRO_RECORDING_STORAGE=s3
+# If you're instance has a role which has access to read
+# and write into the s3 bucket, you don't need this parameter
+# OPENVIDU_PRO_AWS_ACCESS_KEY=
+
+# AWS credentials secret key from OPENVIDU_PRO_AWS_ACCESS_KEY. This property is only
+# taken into account if OPENVIDU_PRO_RECORDING_STORAGE=s3
+# If you're instance has a role which has access to read
+# and write into the s3 bucket, you don't need this parameter
+# OPENVIDU_PRO_AWS_SECRET_KEY=
+
+# AWS region in which the S3 bucket is located (e.g. eu-west-1). If not provided, 
+# the region will try to be discovered automatically, although this is not always possible. 
+# This property is only taken into account if OPENVIDU_PRO_RECORDING_STORAGE=s3
+# OPENVIDU_PRO_AWS_REGION=
+
 # Openvidu Folder Record used for save the openvidu recording videos. Change it
 # with the folder you want to use from your host.
 OPENVIDU_RECORDING_PATH=/opt/openvidu/recordings
