deployment-openvidu-pro: Show error if s3 bucket is defined and 'Recording' is 'local' or 'disabled'

--- a/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
@@ -312,7 +312,7 @@ Rules:
 
   RecordingValidation:
     RuleCondition: 
-      Fn::Equals: [!Ref Recording, 'disabled' ]
+      Fn::Or: [ !Equals [!Ref Recording, 'disabled' ], !Equals [!Ref Recording, 'local' ] ]
     Assertions:
       - AssertDescription: If recording Storage is 'disabled', you don't need to specify a S3 bucket.
         Assert: 
