deployment-openvidu-pro: Add missing rule GetBucketLocation in OpenViduManageEC2Policy

--- a/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
@@ -372,6 +372,7 @@ Resources:
                 - Effect: Allow
                   Action: 
                     - 's3:ListBucket'
+                    - 's3:GetBucketLocation'
                   Resource: 
                     - Fn::If:
                       # Get bucket name depending if the user defines a bucket name or not
