openvidu-test-e2e: update tests with new CustomHttpClient

--- a/openvidu-test-browsers/pom.xml
+++ b/openvidu-test-browsers/pom.xml
@@ -97,6 +97,12 @@
 			<artifactId>unirest-java</artifactId>
 			<version>${version.unirest}</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<profiles>
